--- a/map.html
+++ b/map.html
@@ -186,7 +186,7 @@
     <nav>
       <a href="index.html">ホーム</a>
       <a href="map.html" class="active">店内マップ</a>
-      <a href="log.html">ログ一覧</a>
+      <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">待ち管理</a>      
     </nav>
   </header>
