--- a/histogram.html
+++ b/histogram.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>混雑ヒストグラム</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
@@ -15,32 +15,39 @@
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
     }
+
     header {
       background-color: #2c3e50;
       color: white;
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
+
     .header-links {
       display: flex;
       gap: 20px;
     }
+
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
+
     .header-links a:hover {
       text-decoration: underline;
     }
+
     nav {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -49,6 +56,7 @@
       border-top: 1px solid #fff;
       border-bottom: 1px solid #fff;
     }
+
     nav a {
       padding: 12px 0;
       display: block;
@@ -57,31 +65,50 @@
       font-weight: bold;
       border-right: 1px solid #fff;
     }
+
     nav a:last-child {
       border-right: none;
     }
+
     nav a.active {
       background-color: #1f618d;
     }
+
     nav a:hover {
       background-color: #2980b9;
     }
+
     main {
-      max-width: 800px;
+      max-width: 900px;
       margin: 0 auto;
       padding: 30px 20px;
     }
-    h2 {
-      margin-bottom: 10px;
+
+    .controls {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 20px;
     }
-    canvas {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+    #histogram-container {
+      margin-top: 30px;
     }
-    label, input {
-      margin-top: 20px;
-      display: block;
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 40px;
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
+    }
+
+    th {
+      background-color: #eee;
     }
   </style>
 </head>
@@ -103,10 +130,35 @@
   </header>
 
   <main>
-    <h2>混雑ヒストグラム（1時間ごとの入店者数）</h2>
-    <label for="datePicker">日付を選択:</label>
-    <input type="date" id="datePicker" />
-    <canvas id="histogramChart" width="400" height="300"></canvas>
+    <div class="controls">
+      <label for="datePicker">日付:</label>
+      <input type="date" id="datePicker">
+      <label for="interval">集計間隔:</label>
+      <select id="interval">
+        <option value="60">1時間</option>
+        <option value="30">30分</option>
+        <option value="15">15分</option>
+      </select>
+    </div>
+
+    <div id="histogram-container">
+      <canvas id="histogramChart" width="400" height="200"></canvas>
+    </div>
+
+    <h2>詳細ログ</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>日付</th>
+          <th>時間帯</th>
+          <th>テーブル番号</th>
+          <th>滞在時間</th>
+        </tr>
+      </thead>
+      <tbody id="logTableBody">
+        <!-- 動的に挿入 -->
+      </tbody>
+    </table>
   </main>
 
   <script>
@@ -122,58 +174,96 @@
     const db = firebase.firestore();
 
     const ctx = document.getElementById('histogramChart').getContext('2d');
-    const chart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: Array.from({length: 24}, (_, i) => `${i}:00`),
-        datasets: [{
-          label: '入店者数',
-          data: Array(24).fill(0),
-          backgroundColor: '#3498db'
-        }]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: {
-            beginAtZero: true,
-            ticks: { stepSize: 1 }
-          }
-        }
-      }
-    });
+    let chart;
 
-    async function updateChartByDate(dateString) {
-      const selectedDate = new Date(dateString);
-      const start = new Date(selectedDate);
-      start.setHours(0, 0, 0, 0);
-      const end = new Date(selectedDate);
-      end.setHours(23, 59, 59, 999);
+    function getHourKey(date, interval) {
+      const d = new Date(date);
+      const mins = d.getMinutes();
+      const rounded = mins - (mins % interval);
+      d.setMinutes(rounded, 0, 0);
+      return d.getHours().toString().padStart(2, '0') + ':' + d.getMinutes().toString().padStart(2, '0');
+    }
+
+    function formatTimeRange(startDate, interval) {
+      const end = new Date(startDate.getTime() + interval * 60000);
+      return `${startDate.getHours()}:${startDate.getMinutes().toString().padStart(2, '0')}〜${end.getHours()}:${end.getMinutes().toString().padStart(2, '0')}`;
+    }
+
+    async function loadHistogram() {
+      const selectedDate = document.getElementById('datePicker').value;
+      const interval = parseInt(document.getElementById('interval').value);
+      const date = new Date(selectedDate);
+      const start = new Date(date.setHours(0, 0, 0, 0));
+      const end = new Date(date.setHours(23, 59, 59, 999));
 
       const snapshot = await db.collection("logs")
-        .where("type", "==", "enter")
+        .where("timestamp", ">=", start.toISOString())
+        .where("timestamp", "<=", end.toISOString())
         .get();
 
-      const hourlyCounts = Array(24).fill(0);
+      const counts = {};
+      const logsByTable = {};
 
       snapshot.forEach(doc => {
         const data = doc.data();
-        const time = new Date(data.timestamp);
-        if (time >= start && time <= end) {
-          const hour = time.getHours();
-          hourlyCounts[hour]++;
+        const ts = new Date(data.timestamp);
+        const key = getHourKey(ts, interval);
+
+        counts[key] = (counts[key] || 0) + (data.type === 'enter' ? 1 : 0);
+
+        if (data.type === 'enter') {
+          if (!logsByTable[data.table]) logsByTable[data.table] = [];
+          logsByTable[data.table].push({ time: ts });
         }
       });
 
-      chart.data.datasets[0].data = hourlyCounts;
-      chart.update();
+      const labels = Object.keys(counts).sort();
+      const values = labels.map(l => counts[l]);
+
+      if (chart) chart.destroy();
+      chart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: labels,
+          datasets: [{
+            label: '入店者数',
+            data: values,
+            backgroundColor: '#3498db'
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: {
+            legend: { display: false },
+            title: { display: true, text: `${selectedDate} の混雑状況` }
+          }
+        }
+      });
+
+      const tableBody = document.getElementById("logTableBody");
+      tableBody.innerHTML = "";
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        if (data.type !== 'enter') return;
+        const ts = new Date(data.timestamp);
+        const row = `<tr>
+          <td>${ts.toLocaleDateString('ja-JP')}</td>
+          <td>${ts.getHours().toString().padStart(2, '0')}:${ts.getMinutes().toString().padStart(2, '0')}</td>
+          <td>${data.table}</td>
+          <td>-</td>
+        </tr>`;
+        tableBody.innerHTML += row;
+      });
     }
 
-    const todayStr = new Date().toISOString().split("T")[0];
-    document.getElementById("datePicker").value = todayStr;
-    updateChartByDate(todayStr);
-    document.getElementById("datePicker").addEventListener("change", (e) => {
-      updateChartByDate(e.target.value);
+    document.addEventListener("DOMContentLoaded", () => {
+      const today = new Date().toISOString().split("T")[0];
+      document.getElementById("datePicker").value = today;
+      document.getElementById("interval").value = 60;
+      loadHistogram();
+
+      document.getElementById("datePicker").addEventListener("change", loadHistogram);
+      document.getElementById("interval").addEventListener("change", loadHistogram);
     });
   </script>
 </body>
