--- a/histogram.html
+++ b/histogram.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>混雑ヒストグラム</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
@@ -15,39 +15,32 @@
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
     }
-
     header {
       background-color: #2c3e50;
       color: white;
     }
-
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
-
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
-
     .header-links {
       display: flex;
       gap: 20px;
     }
-
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
-
     .header-links a:hover {
       text-decoration: underline;
     }
-
     nav {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -56,7 +49,6 @@
       border-top: 1px solid #fff;
       border-bottom: 1px solid #fff;
     }
-
     nav a {
       padding: 12px 0;
       display: block;
@@ -65,50 +57,45 @@
       font-weight: bold;
       border-right: 1px solid #fff;
     }
-
     nav a:last-child {
       border-right: none;
     }
-
     nav a.active {
       background-color: #1f618d;
     }
-
     nav a:hover {
       background-color: #2980b9;
     }
-
     main {
       max-width: 900px;
-      margin: 0 auto;
-      padding: 30px 20px;
+      margin: 20px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
     .controls {
       display: flex;
-      align-items: center;
-      gap: 10px;
+      gap: 20px;
       margin-bottom: 20px;
+      align-items: center;
     }
-
-    #histogram-container {
-      margin-top: 30px;
+    canvas {
+      width: 100%;
+      height: 300px;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 40px;
+      margin-top: 30px;
     }
-
     th, td {
       border: 1px solid #ccc;
       padding: 8px;
       text-align: center;
     }
-
     th {
-      background-color: #eee;
+      background-color: #f0f0f0;
     }
   </style>
 </head>
@@ -128,39 +115,25 @@
       <a href="admin.html">待ち管理</a>
     </nav>
   </header>
-
   <main>
     <div class="controls">
-      <label for="datePicker">日付:</label>
-      <input type="date" id="datePicker">
-      <label for="interval">集計間隔:</label>
-      <select id="interval">
-        <option value="60">1時間</option>
-        <option value="30">30分</option>
-        <option value="15">15分</option>
-      </select>
+      <label>日付選択: <input type="date" id="datePicker"></label>
+      <label>時間間隔:
+        <select id="interval">
+          <option value="60">1時間</option>
+          <option value="30">30分</option>
+          <option value="15">15分</option>
+        </select>
+      </label>
     </div>
-
-    <div id="histogram-container">
-      <canvas id="histogramChart" width="400" height="200"></canvas>
-    </div>
-
-    <h2>詳細ログ</h2>
+    <canvas id="histogram"></canvas>
     <table>
       <thead>
-        <tr>
-          <th>日付</th>
-          <th>時間帯</th>
-          <th>テーブル番号</th>
-          <th>滞在時間</th>
-        </tr>
+        <tr><th>日付</th><th>時間帯</th><th>テーブル</th><th>滞在時間</th></tr>
       </thead>
-      <tbody id="logTableBody">
-        <!-- 動的に挿入 -->
-      </tbody>
+      <tbody id="logTable"></tbody>
     </table>
   </main>
-
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
@@ -173,98 +146,79 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    const ctx = document.getElementById('histogramChart').getContext('2d');
+    const ctx = document.getElementById("histogram").getContext("2d");
     let chart;
 
-    function getHourKey(date, interval) {
-      const d = new Date(date);
-      const mins = d.getMinutes();
-      const rounded = mins - (mins % interval);
-      d.setMinutes(rounded, 0, 0);
-      return d.getHours().toString().padStart(2, '0') + ':' + d.getMinutes().toString().padStart(2, '0');
+    function formatTimeRange(date, hour, minute, interval) {
+      const start = new Date(date);
+      start.setHours(hour, minute, 0);
+      const end = new Date(start.getTime() + interval * 60000);
+      return `${start.getHours().toString().padStart(2, '0')}:${start.getMinutes().toString().padStart(2, '0')}〜${end.getHours().toString().padStart(2, '0')}:${end.getMinutes().toString().padStart(2, '0')}`;
     }
 
-    function formatTimeRange(startDate, interval) {
-      const end = new Date(startDate.getTime() + interval * 60000);
-      return `${startDate.getHours()}:${startDate.getMinutes().toString().padStart(2, '0')}〜${end.getHours()}:${end.getMinutes().toString().padStart(2, '0')}`;
-    }
+    async function fetchData() {
+      const selectedDate = document.getElementById("datePicker").value;
+      const interval = parseInt(document.getElementById("interval").value);
+      if (!selectedDate) return;
+      const snapshot = await db.collection("logs").orderBy("timestamp").get();
 
-    async function loadHistogram() {
-      const selectedDate = document.getElementById('datePicker').value;
-      const interval = parseInt(document.getElementById('interval').value);
-      const date = new Date(selectedDate);
-      const start = new Date(date.setHours(0, 0, 0, 0));
-      const end = new Date(date.setHours(23, 59, 59, 999));
+      const logs = snapshot.docs.map(doc => doc.data()).filter(data => {
+        return data.timestamp && data.timestamp.startsWith(selectedDate);
+      });
 
-      const snapshot = await db.collection("logs")
-        .where("timestamp", ">=", start.toISOString())
-        .where("timestamp", "<=", end.toISOString())
-        .get();
+      const grouped = {};
+      const enterMap = {};
+      const detailRows = [];
+      for (let hour = 0; hour < 24; hour++) {
+        for (let min = 0; min < 60; min += interval) {
+          const label = formatTimeRange(selectedDate, hour, min, interval);
+          grouped[label] = 0;
+        }
+      }
 
-      const counts = {};
-      const logsByTable = {};
-
-      snapshot.forEach(doc => {
-        const data = doc.data();
+      logs.forEach(data => {
         const ts = new Date(data.timestamp);
-        const key = getHourKey(ts, interval);
-
-        counts[key] = (counts[key] || 0) + (data.type === 'enter' ? 1 : 0);
-
-        if (data.type === 'enter') {
-          if (!logsByTable[data.table]) logsByTable[data.table] = [];
-          logsByTable[data.table].push({ time: ts });
+        const key = `${data.table}-${data.type}`;
+        if (data.type === "enter") {
+          enterMap[data.table] = ts;
+        } else if (data.type === "exit" && enterMap[data.table]) {
+          const stay = Math.round((ts - enterMap[data.table]) / 60000);
+          const row = `<tr><td>${selectedDate}</td><td>${enterMap[data.table].toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</td><td>${data.table}</td><td>${stay}分</td></tr>`;
+          detailRows.push(row);
+          const intervalStart = new Date(enterMap[data.table]);
+          intervalStart.setMinutes(Math.floor(intervalStart.getMinutes() / interval) * interval);
+          const label = formatTimeRange(selectedDate, intervalStart.getHours(), intervalStart.getMinutes(), interval);
+          if (grouped[label] !== undefined) grouped[label]++;
+          delete enterMap[data.table];
         }
       });
 
-      const labels = Object.keys(counts).sort();
-      const values = labels.map(l => counts[l]);
+      document.getElementById("logTable").innerHTML = detailRows.join("\n");
 
       if (chart) chart.destroy();
       chart = new Chart(ctx, {
-        type: 'bar',
+        type: "bar",
         data: {
-          labels: labels,
+          labels: Object.keys(grouped),
           datasets: [{
-            label: '入店者数',
-            data: values,
-            backgroundColor: '#3498db'
+            label: "入店数",
+            data: Object.values(grouped),
+            backgroundColor: "rgba(52, 152, 219, 0.7)"
           }]
         },
         options: {
-          responsive: true,
-          plugins: {
-            legend: { display: false },
-            title: { display: true, text: `${selectedDate} の混雑状況` }
+          scales: {
+            x: { title: { display: true, text: "時間帯" } },
+            y: { title: { display: true, text: "入店数" }, beginAtZero: true }
           }
         }
       });
-
-      const tableBody = document.getElementById("logTableBody");
-      tableBody.innerHTML = "";
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        if (data.type !== 'enter') return;
-        const ts = new Date(data.timestamp);
-        const row = `<tr>
-          <td>${ts.toLocaleDateString('ja-JP')}</td>
-          <td>${ts.getHours().toString().padStart(2, '0')}:${ts.getMinutes().toString().padStart(2, '0')}</td>
-          <td>${data.table}</td>
-          <td>-</td>
-        </tr>`;
-        tableBody.innerHTML += row;
-      });
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const today = new Date().toISOString().split("T")[0];
-      document.getElementById("datePicker").value = today;
-      document.getElementById("interval").value = 60;
-      loadHistogram();
-
-      document.getElementById("datePicker").addEventListener("change", loadHistogram);
-      document.getElementById("interval").addEventListener("change", loadHistogram);
-    });
+    document.getElementById("datePicker").valueAsDate = new Date();
+    document.getElementById("datePicker").addEventListener("change", fetchData);
+    document.getElementById("interval").addEventListener("change", fetchData);
+    fetchData();
   </script>
 </body>
 </html>
