--- a/histogram.html
+++ b/histogram.html
@@ -2,11 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>混雑ヒストグラム</title>
+  <title>混雑傾向分析</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -38,9 +39,6 @@
       text-decoration: none;
       font-weight: 500;
     }
-    .header-links a:hover {
-      text-decoration: underline;
-    }
     nav {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -63,39 +61,43 @@
     nav a.active {
       background-color: #1f618d;
     }
-    nav a:hover {
-      background-color: #2980b9;
-    }
-    main {
+    .container {
       max-width: 900px;
-      margin: 20px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin: 0 auto;
+      padding: 30px 20px;
     }
     .controls {
       display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
+      justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
     }
-    canvas {
-      width: 100%;
-      height: 300px;
+    .chart-section {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 40px;
+    }
+    .table-section {
+      background: #fefefe;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 30px;
+      margin-top: 20px;
     }
     th, td {
       border: 1px solid #ccc;
-      padding: 8px;
+      padding: 8px 12px;
       text-align: center;
     }
     th {
-      background-color: #f0f0f0;
+      background-color: #e0ebf9;
     }
   </style>
 </head>
@@ -113,112 +115,46 @@
       <a href="map.html">店内マップ</a>
       <a href="log.html">ログ一覧</a>
       <a href="admin.html">待ち管理</a>
+      <a href="stats.html" class="active">混雑傾向</a>
     </nav>
   </header>
-  <main>
+
+  <div class="container">
     <div class="controls">
-      <label>日付選択: <input type="date" id="datePicker"></label>
-      <label>時間間隔:
-        <select id="interval">
+      <label>日付: <input type="date" id="datePicker" /></label>
+      <label>時間間隔: 
+        <select id="intervalPicker">
           <option value="60">1時間</option>
           <option value="30">30分</option>
           <option value="15">15分</option>
         </select>
       </label>
     </div>
-    <canvas id="histogram"></canvas>
-    <table>
-      <thead>
-        <tr><th>日付</th><th>時間帯</th><th>テーブル</th><th>滞在時間</th></tr>
-      </thead>
-      <tbody id="logTable"></tbody>
-    </table>
-  </main>
+
+    <div class="chart-section">
+      <canvas id="histogramChart" height="100"></canvas>
+    </div>
+
+    <div class="table-section">
+      <h3>詳細ログ</h3>
+      <table id="logTable">
+        <thead>
+          <tr>
+            <th>日付</th>
+            <th>時間帯</th>
+            <th>テーブル番号</th>
+            <th>滞在時間</th>
+            <th>入店時間</th>
+            <th>退店時間</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
+
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    const ctx = document.getElementById("histogram").getContext("2d");
-    let chart;
-
-    function formatTimeRange(date, hour, minute, interval) {
-      const start = new Date(date);
-      start.setHours(hour, minute, 0);
-      const end = new Date(start.getTime() + interval * 60000);
-      return `${start.getHours().toString().padStart(2, '0')}:${start.getMinutes().toString().padStart(2, '0')}〜${end.getHours().toString().padStart(2, '0')}:${end.getMinutes().toString().padStart(2, '0')}`;
-    }
-
-    async function fetchData() {
-      const selectedDate = document.getElementById("datePicker").value;
-      const interval = parseInt(document.getElementById("interval").value);
-      if (!selectedDate) return;
-      const snapshot = await db.collection("logs").orderBy("timestamp").get();
-
-      const logs = snapshot.docs.map(doc => doc.data()).filter(data => {
-        return data.timestamp && data.timestamp.startsWith(selectedDate);
-      });
-
-      const grouped = {};
-      const enterMap = {};
-      const detailRows = [];
-      for (let hour = 0; hour < 24; hour++) {
-        for (let min = 0; min < 60; min += interval) {
-          const label = formatTimeRange(selectedDate, hour, min, interval);
-          grouped[label] = 0;
-        }
-      }
-
-      logs.forEach(data => {
-        const ts = new Date(data.timestamp);
-        const key = `${data.table}-${data.type}`;
-        if (data.type === "enter") {
-          enterMap[data.table] = ts;
-        } else if (data.type === "exit" && enterMap[data.table]) {
-          const stay = Math.round((ts - enterMap[data.table]) / 60000);
-          const row = `<tr><td>${selectedDate}</td><td>${enterMap[data.table].toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</td><td>${data.table}</td><td>${stay}分</td></tr>`;
-          detailRows.push(row);
-          const intervalStart = new Date(enterMap[data.table]);
-          intervalStart.setMinutes(Math.floor(intervalStart.getMinutes() / interval) * interval);
-          const label = formatTimeRange(selectedDate, intervalStart.getHours(), intervalStart.getMinutes(), interval);
-          if (grouped[label] !== undefined) grouped[label]++;
-          delete enterMap[data.table];
-        }
-      });
-
-      document.getElementById("logTable").innerHTML = detailRows.join("\n");
-
-      if (chart) chart.destroy();
-      chart = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: Object.keys(grouped),
-          datasets: [{
-            label: "入店数",
-            data: Object.values(grouped),
-            backgroundColor: "rgba(52, 152, 219, 0.7)"
-          }]
-        },
-        options: {
-          scales: {
-            x: { title: { display: true, text: "時間帯" } },
-            y: { title: { display: true, text: "入店数" }, beginAtZero: true }
-          }
-        }
-      });
-    }
-
-    document.getElementById("datePicker").valueAsDate = new Date();
-    document.getElementById("datePicker").addEventListener("change", fetchData);
-    document.getElementById("interval").addEventListener("change", fetchData);
-    fetchData();
+    // スクリプトはここに追加される（Firebase接続、グラフ更新、表更新）
   </script>
 </body>
 </html>
