--- a/histogram.html
+++ b/histogram.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>混雑傾向分析</title>
+  <title>混雑統計</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -16,29 +16,35 @@
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
     }
+
     header {
       background-color: #2c3e50;
       color: white;
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
+
     .header-links {
       display: flex;
       gap: 20px;
     }
+
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
+
     nav {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -47,6 +53,7 @@
       border-top: 1px solid #fff;
       border-bottom: 1px solid #fff;
     }
+
     nav a {
       padding: 12px 0;
       display: block;
@@ -55,49 +62,53 @@
       font-weight: bold;
       border-right: 1px solid #fff;
     }
+
     nav a:last-child {
       border-right: none;
     }
+
     nav a.active {
       background-color: #1f618d;
     }
-    .container {
+
+    main {
       max-width: 900px;
       margin: 0 auto;
       padding: 30px 20px;
     }
+
     .controls {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
       margin-bottom: 20px;
     }
-    .chart-section {
-      background: white;
-      border-radius: 10px;
+
+    .chart-area {
+      background: #fff;
       padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      margin-bottom: 40px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      margin-bottom: 30px;
     }
-    .table-section {
-      background: #fefefe;
-      border-radius: 10px;
+
+    .table-area {
+      background: #f9f9f9;
       padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
     }
+
     th, td {
-      border: 1px solid #ccc;
       padding: 8px 12px;
+      border: 1px solid #ccc;
       text-align: center;
     }
+
     th {
-      background-color: #e0ebf9;
+      background-color: #eee;
     }
   </style>
 </head>
@@ -115,32 +126,30 @@
       <a href="map.html">店内マップ</a>
       <a href="log.html">ログ一覧</a>
       <a href="admin.html">待ち管理</a>
-      <a href="stats.html" class="active">混雑傾向</a>
     </nav>
   </header>
 
-  <div class="container">
+  <main>
     <div class="controls">
-      <label>日付: <input type="date" id="datePicker" /></label>
-      <label>時間間隔: 
-        <select id="intervalPicker">
-          <option value="60">1時間</option>
-          <option value="30">30分</option>
-          <option value="15">15分</option>
-        </select>
-      </label>
+      <label for="datePicker">日付選択:</label>
+      <input type="date" id="datePicker" />
+      <label for="interval">間隔:</label>
+      <select id="interval">
+        <option value="60">1時間ごと</option>
+        <option value="30">30分ごと</option>
+      </select>
     </div>
 
-    <div class="chart-section">
-      <canvas id="histogramChart" height="100"></canvas>
+    <div class="chart-area">
+      <canvas id="histogramCanvas" height="120"></canvas>
     </div>
 
-    <div class="table-section">
-      <h3>詳細ログ</h3>
-      <table id="logTable">
+    <div class="table-area">
+      <h3>詳細データ</h3>
+      <table>
         <thead>
           <tr>
-            <th>日付</th>
+            <th>年月日</th>
             <th>時間帯</th>
             <th>テーブル番号</th>
             <th>滞在時間</th>
@@ -148,13 +157,108 @@
             <th>退店時間</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody id="detailTableBody">
+          <tr><td colspan="6">データを読み込み中...</td></tr>
+        </tbody>
       </table>
     </div>
-  </div>
+  </main>
 
   <script>
-    // スクリプトはここに追加される（Firebase接続、グラフ更新、表更新）
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    const ctx = document.getElementById("histogramCanvas").getContext("2d");
+    let chart;
+
+    function fetchAndRender() {
+      const selectedDate = document.getElementById("datePicker").value || new Date().toISOString().split("T")[0];
+      const interval = parseInt(document.getElementById("interval").value);
+      const start = new Date(`${selectedDate}T00:00:00+09:00`).getTime();
+      const end = start + 24 * 60 * 60 * 1000;
+      const bins = {};
+      const labels = [];
+      for (let t = start; t < end; t += interval * 60000) {
+        const hour = new Date(t).toLocaleTimeString("ja-JP", { hour: "2-digit", minute: "2-digit", hour12: false });
+        const next = new Date(t + interval * 60000).toLocaleTimeString("ja-JP", { hour: "2-digit", minute: "2-digit", hour12: false });
+        const label = `${hour}～${next}`;
+        bins[label] = 0;
+        labels.push(label);
+      }
+
+      db.collection("logs").get().then(snapshot => {
+        const entries = [];
+        snapshot.forEach(doc => {
+          const data = doc.data();
+          if (data.type === "enter" && data.timestamp) entries.push(data);
+        });
+
+        entries.forEach(entry => {
+          const time = new Date(entry.timestamp).getTime();
+          if (time >= start && time < end) {
+            const diff = time - start;
+            const index = Math.floor(diff / (interval * 60000));
+            const keys = Object.keys(bins);
+            bins[keys[index]]++;
+          }
+        });
+
+        if (chart) chart.destroy();
+        chart = new Chart(ctx, {
+          type: "bar",
+          data: {
+            labels,
+            datasets: [{
+              label: "入店者数",
+              data: Object.values(bins),
+              backgroundColor: "#3498db"
+            }]
+          },
+          options: {
+            responsive: true,
+            scales: {
+              y: {
+                beginAtZero: true,
+                ticks: {
+                  stepSize: 1
+                }
+              }
+            }
+          }
+        });
+
+        const tbody = document.getElementById("detailTableBody");
+        tbody.innerHTML = "";
+        entries.forEach(entry => {
+          const date = new Date(entry.timestamp);
+          const row = document.createElement("tr");
+          row.innerHTML = `
+            <td>${date.toLocaleDateString()}</td>
+            <td>${date.toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}</td>
+            <td>${entry.table || "-"}</td>
+            <td>--</td>
+            <td>${date.toLocaleString()}</td>
+            <td>--</td>
+          `;
+          tbody.appendChild(row);
+        });
+      });
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("datePicker").value = new Date().toISOString().split("T")[0];
+      document.getElementById("interval").addEventListener("change", fetchAndRender);
+      document.getElementById("datePicker").addEventListener("change", fetchAndRender);
+      fetchAndRender();
+    });
   </script>
 </body>
 </html>
