--- a/histogram.html
+++ b/histogram.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>混雑状況</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>混雑分析</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
@@ -70,35 +70,35 @@
     main {
       padding: 20px;
       max-width: 1000px;
-      margin: auto;
+      margin: 0 auto;
     }
-    .controls {
+    .filters {
       margin-bottom: 20px;
     }
     .chart-container {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 30px;
+      width: 100%;
       overflow-x: auto;
+      background: #fff;
+      border-radius: 10px;
+      padding: 10px;
     }
-    .details-container {
-      background: #f9f9f9;
+    #details {
+      margin-top: 30px;
+      background-color: #f4f4f4;
       padding: 20px;
       border-radius: 10px;
-      overflow-x: auto;
     }
     table {
       width: 100%;
       border-collapse: collapse;
     }
     th, td {
-      padding: 10px;
+      border: 1px solid #ccc;
+      padding: 8px;
       text-align: center;
-      border-bottom: 1px solid #ccc;
     }
     th {
-      background-color: #eee;
+      background-color: #e0e0e0;
     }
   </style>
 </head>
@@ -116,15 +116,15 @@
       <a href="map.html">店内マップ</a>
       <a href="log.html">ログ一覧</a>
       <a href="admin.html">待ち管理</a>
-      <a href="stats.html" class="active">統計</a>
     </nav>
   </header>
+
   <main>
-    <div class="controls">
-      <label for="datePicker">日付選択: </label>
-      <input type="date" id="datePicker" />
-      <label for="intervalSelect">時間単位: </label>
-      <select id="intervalSelect">
+    <h2>混雑傾向分析</h2>
+    <div class="filters">
+      日付: <input type="date" id="datePicker">
+      時間単位: 
+      <select id="interval">
         <option value="60">60分</option>
         <option value="30">30分</option>
         <option value="10">10分</option>
@@ -133,54 +133,147 @@
     <div class="chart-container">
       <canvas id="histogram"></canvas>
     </div>
-    <div class="details-container">
-      <h2>詳細データ</h2>
-      <table id="detailsTable">
+    <div id="details">
+      <h3>詳細データ</h3>
+      <table>
         <thead>
           <tr>
-            <th>年月日</th>
+            <th>日付</th>
             <th>時間帯</th>
-            <th>テーブル</th>
+            <th>テーブル番号</th>
             <th>滞在時間</th>
             <th>入店時間</th>
             <th>退店時間</th>
           </tr>
         </thead>
-        <tbody>
-          <!-- データ行はここに挿入されます -->
-        </tbody>
+        <tbody id="logTableBody"></tbody>
       </table>
     </div>
   </main>
+
   <script>
-    // Firebase と Chart.js 初期設定は既に実装されている想定
-    // ヒストグラム y 軸最大値のデフォルト値を設定
-    const ctx = document.getElementById('histogram').getContext('2d');
-    const histogramChart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: [],
-        datasets: [{
-          label: '入店者数',
-          data: [],
-          backgroundColor: '#3498db'
-        }]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: {
-            beginAtZero: true,
-            suggestedMax: 10 // 最小でも10人分は縦軸を確保
-          },
-          x: {
-            ticks: {
-              maxRotation: 90,
-              minRotation: 45
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    let chart;
+
+    function getTimeSlots(interval) {
+      const slots = [];
+      for (let h = 0; h < 24; h++) {
+        for (let m = 0; m < 60; m += interval) {
+          const start = `${String(h).padStart(2, '0')}:${String(m).padStart(2, '0')}`;
+          const end = `${String(h + Math.floor((m + interval) / 60)).padStart(2, '0')}:${String((m + interval) % 60).padStart(2, '0')}`;
+          slots.push(`${start}～${end}`);
+        }
+      }
+      return slots;
+    }
+
+    function formatTime(dt) {
+      return dt.toLocaleString("ja-JP", { hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Tokyo' });
+    }
+
+    async function updateChartAndTable() {
+      const date = document.getElementById("datePicker").value;
+      const interval = parseInt(document.getElementById("interval").value);
+      if (!date) return;
+
+      const startOfDay = new Date(`${date}T00:00:00+09:00`).toISOString();
+      const endOfDay = new Date(`${date}T23:59:59+09:00`).toISOString();
+      const snapshot = await db.collection("logs")
+        .where("timestamp", ">=", startOfDay)
+        .where("timestamp", "<=", endOfDay)
+        .orderBy("timestamp")
+        .get();
+
+      const logs = snapshot.docs.map(doc => doc.data());
+      const enters = logs.filter(log => log.type === "enter");
+      const exits = logs.filter(log => log.type === "exit");
+
+      const slots = getTimeSlots(interval);
+      const counts = Array(slots.length).fill(0);
+      const details = [];
+
+      enters.forEach(entry => {
+        const table = entry.table;
+        const enterTime = new Date(entry.timestamp);
+        const exit = exits.find(e => e.table === table && new Date(e.timestamp) > enterTime);
+        const exitTime = exit ? new Date(exit.timestamp) : null;
+
+        const minutes = enterTime.getHours() * 60 + enterTime.getMinutes();
+        const slotIndex = Math.floor(minutes / interval);
+        if (counts[slotIndex] !== undefined) counts[slotIndex]++;
+
+        const stay = exitTime ? Math.floor((exitTime - enterTime) / 60000) : null;
+        details.push({
+          date,
+          table,
+          slot: slots[slotIndex],
+          stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
+          enter: enterTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }),
+          exit: exitTime ? exitTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }) : "--"
+        });
+      });
+
+      // ソート
+      details.reverse();
+
+      const ctx = document.getElementById("histogram").getContext("2d");
+      if (chart) chart.destroy();
+      chart = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: slots,
+          datasets: [{
+            label: "入店者数",
+            data: counts,
+            backgroundColor: "#4a90e2"
+          }]
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          scales: {
+            y: {
+              beginAtZero: true,
+              stepSize: 1
             }
           }
         }
+      });
+
+      // 表描画
+      const tbody = document.getElementById("logTableBody");
+      tbody.innerHTML = "";
+      for (const d of details) {
+        tbody.innerHTML += `
+          <tr>
+            <td>${d.date}</td>
+            <td>${d.slot}</td>
+            <td>${d.table}</td>
+            <td>${d.stay}</td>
+            <td>${d.enter}</td>
+            <td>${d.exit}</td>
+          </tr>
+        `;
       }
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const today = new Date().toISOString().split("T")[0];
+      document.getElementById("datePicker").value = today;
+      updateChartAndTable();
+
+      document.getElementById("datePicker").addEventListener("change", updateChartAndTable);
+      document.getElementById("interval").addEventListener("change", updateChartAndTable);
     });
   </script>
 </body>
