--- a/histogram.html
+++ b/histogram.html
@@ -244,6 +244,7 @@
           scales: {
             y: {
               beginAtZero: true,
+              suggestedMax: 10,
               stepSize: 1
             }
           }
