--- a/histogram.html
+++ b/histogram.html
@@ -77,6 +77,7 @@
     }
     .chart-container {
       width: 100%;
+      height: 70vh;
       overflow-x: auto;
       background: #fff;
       border-radius: 10px;
