--- a/admin.html
+++ b/admin.html
@@ -120,10 +120,10 @@
       </div>
     </div>
     <nav>
-      <a href="index.html" class="active">ホーム</a>
+      <a href="index.html">ホーム</a>
       <a href="map.html">店内マップ</a>
-      <a href="log.html">ログ一覧</a>
-      <a href="admin.html">待ち管理</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="histogram.html" class="active">待ち管理</a>
     </nav>
   </header>
   <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
