--- a/admin.html
+++ b/admin.html
@@ -145,7 +145,8 @@
 
     function formatTime(iso) {
       const d = new Date(iso);
-      return d.toLocaleString("ja-JP", { hour: '2-digit', minute: '2-digit' });
+      const options = { month: 'numeric', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+      return d.toLocaleString("ja-JP", options);
     }
 
     function renderQueue() {
