--- a/index.html
+++ b/index.html
@@ -100,6 +100,31 @@
     #tables p {
       font-size: 17px;
     }
+
+    .map-container {
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      margin: 30px auto;
+    }
+
+    .map-image {
+      width: 100%;
+      display: block;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+
+    .table-marker {
+      position: absolute;
+      font-size: 1.2em;
+      font-weight: bold;
+      color: black;
+      background: rgba(255, 255, 255, 0.7);
+      padding: 4px 8px;
+      border-radius: 5px;
+      border: 1px solid #999;
+    }
   </style>
 
   <script>
