--- a/map.html
+++ b/map.html
@@ -20,11 +20,24 @@
       background-color: #f7e3c5;
       border: 2px solid #444;
     }
-
+    
     .table {
       position: absolute;
       width: 80px;
       height: 130px;
+      background-color: #7b4a12;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
+    .table2 {
+      position: absolute;
+      width: 80px;
+      height: 100px;
       background-color: #7b4a12;
       color: white;
       display: flex;
@@ -70,7 +83,7 @@
     <div class="chair" style="top: 235px; left: 112px;"></div>
 
     <!-- テーブル2 -->
-    <div class="table" style="top: 325px; left: 30px;" id="table2">2</div>
+    <div class="table2" style="top: 325px; left: 30px;" id="table2">2</div>
     <div class="chair" style="top: 340px; left: 10px;"></div>
     <div class="chair" style="top: 340px; left: 112px;"></div>
     <div class="chair" style="top: 380px; left: 10px;"></div>
