--- a/map.html
+++ b/map.html
@@ -89,6 +89,15 @@
     <div class="chair" style="top: 380px; left: 10px;"></div>
     <div class="chair" style="top: 380px; left: 112px;"></div>
 
+    <!-- テーブル3 -->
+    <div class="table2" style="top: 475px; left: 30px;" id="table2">2</div>
+    <div class="chair" style="top: 490px; left: 10px;"></div>
+    <div class="chair" style="top: 490px; left: 112px;"></div>
+    <div class="chair" style="top: 530px; left: 10px;"></div>
+    <div class="chair" style="top: 530px; left: 112px;"></div>
+
+
+    
     <!-- テーブル3（中央8名） -->
     <div class="table" style="top: 90px; left: 200px; width: 60px; height: 180px;" id="table3">3</div>
     <div class="chair" style="top: 80px; left: 190px;"></div>
