--- a/map.html
+++ b/map.html
@@ -97,6 +97,16 @@
     <div class="chair" style="top: 530px; left: 112px;"></div>
 
 
+    <!-- テーブル4 -->
+    <div class="table" style="top: 140px; left: 730px;" id="table4">4</div>
+    <div class="chair" style="top: 155px; left: 710px;"></div>
+    <div class="chair" style="top: 155px; left: 812px;"></div>
+    <div class="chair" style="top: 195px; left: 710px;"></div>
+    <div class="chair" style="top: 195px; left: 812px;"></div>
+    <div class="chair" style="top: 235px; left: 710px;"></div>
+    <div class="chair" style="top: 235px; left: 812px;"></div>
+
+
     
     <!-- テーブル3（中央8名） -->
     <div class="table" style="top: 90px; left: 200px; width: 60px; height: 180px;" id="table3">3</div>
