--- a/map.html
+++ b/map.html
@@ -107,6 +107,18 @@
     <div class="chair" style="top: 135px; left: 762px;"></div>
 
 
+    <!-- テーブル5 -->
+    <div class="table" style="top: 240px; left: 680px;" id="table5">5</div>
+    <div class="chair" style="top: 255px; left: 660px;"></div>
+    <div class="chair" style="top: 255px; left: 762px;"></div>
+    <div class="chair" style="top: 295px; left: 660px;"></div>
+    <div class="chair" style="top: 295px; left: 762px;"></div>
+    <div class="chair" style="top: 335px; left: 660px;"></div>
+    <div class="chair" style="top: 335px; left: 762px;"></div>
+
+
+
+
     
     <!-- テーブル3（中央8名） -->
     <div class="table" style="top: 90px; left: 200px; width: 60px; height: 180px;" id="table3">3</div>
