--- a/map.html
+++ b/map.html
@@ -117,6 +117,16 @@
     <div class="chair" style="top: 335px; left: 762px;"></div>
 
 
+    <!-- テーブル6 -->
+    <div class="table" style="top: 490px; left: 680px;" id="table5">5</div>
+    <div class="chair" style="top: 505px; left: 660px;"></div>
+    <div class="chair" style="top: 505px; left: 762px;"></div>
+    <div class="chair" style="top: 545px; left: 660px;"></div>
+    <div class="chair" style="top: 545px; left: 762px;"></div>
+    <div class="chair" style="top: 585px; left: 660px;"></div>
+    <div class="chair" style="top: 585px; left: 762px;"></div>
+
+
 
 
     
