--- a/map.html
+++ b/map.html
@@ -47,6 +47,20 @@
       border-radius: 4px;
     }
 
+    .border {
+      position: absolute;
+      width: 120px;
+      height: 2px;
+      background-color: #7b4a12;
+      color: brack;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      border-radius: 7px;
+    }
+
+
     .chair {
       position: absolute;
       width: 16px;
@@ -118,6 +132,7 @@
 
 
     <!-- テーブル6 -->
+    <div class="border" style="top: 400px; left: 680px;" id="table6">6</div>
     <div class="table" style="top: 470px; left: 680px;" id="table6">6</div>
     <div class="chair" style="top: 485px; left: 660px;"></div>
     <div class="chair" style="top: 485px; left: 762px;"></div>
