--- a/map.html
+++ b/map.html
@@ -49,15 +49,15 @@
 
     .border {
       position: absolute;
-      width: 120px;
-      height: 2px;
-      background-color: #7b4a12;
+      width: 150px;
+      height: 5px;
+      background-color: #000000;
       color: brack;
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: bold;
-      border-radius: 7px;
+      border-radius: 8px;
     }
 
 
