--- a/map.html
+++ b/map.html
@@ -60,6 +60,19 @@
       border-radius: 4px;
     }
 
+    .border2 {
+      position: absolute;
+      width: 2px;
+      height: 150px;
+      background-color: #000000;
+      color: brack;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
 
     .chair {
       position: absolute;
@@ -132,14 +145,15 @@
 
 
     <!-- テーブル6 -->
-    <div class="border" style="top: 400px; left: 630px;" id="table6"></div>
+    <div class="border" style="top: 400px; left: 630px;"></div>
+    <div class="border" style="top: 400px; left: 630px;"></div>
     <div class="table" style="top: 470px; left: 680px;" id="table6">6</div>
-    <div class="chair" style="top: 485px; left: 660px;"></div>
-    <div class="chair" style="top: 485px; left: 762px;"></div>
-    <div class="chair" style="top: 525px; left: 660px;"></div>
-    <div class="chair" style="top: 525px; left: 762px;"></div>
-    <div class="chair" style="top: 565px; left: 660px;"></div>
-    <div class="chair" style="top: 565px; left: 762px;"></div>
+    <div class="chair" style="top: 485px; left: 660px;" id="table6"></div>
+    <div class="chair" style="top: 485px; left: 762px;" id="table6"></div>
+    <div class="chair" style="top: 525px; left: 660px;" id="table6"></div>
+    <div class="chair" style="top: 525px; left: 762px;" id="table6"></div>
+    <div class="chair" style="top: 565px; left: 660px;" id="table6"></div>
+    <div class="chair" style="top: 565px; left: 762px;" id="table6"></div>
 
 
 
