--- a/map.html
+++ b/map.html
@@ -73,6 +73,19 @@
       border-radius: 4px;
     }
 
+    .border3 {
+      position: absolute;
+      width: 2px;
+      height: 100px;
+      background-color: #000000;
+      color: brack;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
 
     .chair {
       position: absolute;
@@ -143,9 +156,12 @@
     <div class="chair" style="top: 335px; left: 660px;"></div>
     <div class="chair" style="top: 335px; left: 762px;"></div>
 
+    <!--　縦棒= =>
+    <div class="border3" style="top: 350px; left: 600px;"></div>
+    <div class="border2" style="top: 450px; left: 600px;"></div>
+
 
     <!-- テーブル6 -->
-    <div class="border2" style="top: 450px; left: 600px;"></div>
     <div class="border" style="top: 400px; left: 630px;"></div>
     <div class="table" style="top: 470px; left: 680px;" id="table6">6</div>
     <div class="chair" style="top: 485px; left: 660px;" id="table6"></div>
@@ -173,7 +189,6 @@
 
     <!-- WC -->
     <div class="label" style="top: 20px; left: 110px;">WC</div>
-    <div class="label" style="top: 460px; left: 620px;">WC</div>
 
     <!-- 入り口 -->
     <div class="label" style="top: 0px; left: 370px;">入口</div>
