--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@
 
     .border {
       position: absolute;
-      width: 150px;
+      width: 170px;
       height: 2px;
       background-color: #000000;
       color: brack;
@@ -157,6 +157,7 @@
     <div class="chair" style="top: 335px; left: 762px;"></div>
 
     <!--　縦棒-->
+    <div class="border3" style="top: 210px; left: 600px;"></div>
     <div class="border3" style="top: 310px; left: 600px;"></div>
     <div class="border2" style="top: 450px; left: 600px;"></div>
 
